Add Katherine, Paul and Ruth photos

--- a/index.html
+++ b/index.html
@@ -183,7 +183,6 @@ COPO is a portal for plant scientists to describe, store & retrieve data more ea
                     </div>
                     <div class="o_bio">
                         <h4>Earlham Institute</h4>
-
                         The Data Infrastructure and Algorithms group focuses on research into understanding how best to manage, represent and analyse
                         data for open science, as well as exploring new hardware, algorithms and methodologies to develop
                         tools to push the boundaries of data-driven informatics in the life sciences. The team applies their
@@ -273,8 +272,7 @@ COPO is a portal for plant scientists to describe, store & retrieve data more ea
                     <p class="p_position">Oxford eResearch</p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                     industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and
-                    scrambled it to make a type specimen book.
+                    and scrambled it to make a type specimen book.
                 </div>
             </div>
             <div class="col-md-3 col-md-3 col-sm-3 person">
@@ -284,8 +282,39 @@ COPO is a portal for plant scientists to describe, store & retrieve data more ea
                     <p class="p_position">Oxford eResearch</p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                     industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and
-                    scrambled it to make a type specimen book.
+                    and scrambled it to make a type specimen book.
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3 col-md-3 col-sm-3 person">
+                <img src="assets/img/katherine.png"/>
+                <div class="p_bio">
+                    <h4>Katherine Denby</h4>
+                    <p class="p_position">University of York</p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book.
+                </div>
+            </div>
+            <div class="col-md-3 col-md-3 col-sm-3 person">
+                <img src="assets/img/paul.jpg"/>
+                <div class="p_bio">
+                    <h4>Paul Kersey</h4>
+                    <p class="p_position">EMBL EBI</p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book.
+                </div>
+            </div>
+            <div class="col-md-3 col-md-3 col-sm-3 person">
+                <img src="assets/img/ruth.jpg"/>
+                <div class="p_bio">
+                    <h4>Ruth Bastow</h4>
+                    <p class="p_position">Global Plant Council</p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book.
                 </div>
             </div>
         </div>
