update navigation menus

--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@
 
             <li><a href="#about">Project</a>
             </li>
-
+            <li><a href="#agenda-sec">Agenda</a>
+            </li>
             <li><a href="#work-sec">People</a>
             </li>
-            <li><a href="#contact-sec">Content</a>
+            <li><a href="#contact-sec">Contact</a>
             </li>
 
         </ul>
@@ -140,7 +141,7 @@
 
 
 <!-- WORK Flow Section -->
-<section class="color-green" id="work-sec">
+<section class="color-green" id="agenda-sec">
     <div class="container">
 
         <div class="row">
@@ -190,7 +191,7 @@
     </div>
 </section>
 
-<section class="color-white">
+<section class="color-white" id="work-sec">
     <div class="container">
 
 
@@ -255,7 +256,7 @@
                 <div class="p_bio">
                     <h4>Toni Etuk</h4>
                     <p class="p_position">Earlham Institute</p>
-                    Anthony Etuk (Toni) works as a Research Software Engineer at the Earlham Institute. He has a PhD in
+                    Toni works as a Research Software Engineer at the Earlham Institute. He has a PhD in
                     Computer Science from the University of Aberdeen. His area of interest was multi-agent systems, with
                     a focus on computational models of Trust and Reputation. He continues to explore these techniques,
                     and a number of techniques from Machine Learning and statistics, in contexts of Open Science and
@@ -269,10 +270,11 @@
                 <div class="p_bio">
                     <h4>Felix Shaw</h4>
                     <p class="p_position">Earlham Institute</p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and
-                    scrambled it to make a type specimen book.
+                    Felix is a Research Software Engineer working on the COPO platform; a tool for creating,
+                    depositing and searching for bundles of research objects. His PhD is in Computer Science studying facial
+                    animation, computer graphics, signal processing and machine learning. His current interests are in
+                    the fields of data science, open source and how to apply machine learning techniques in these areas
+                    to improve the tools available to researchers.
                     <p class="p_orcid"><img src="assets/img/orcid.png"><a
                             href="http://orcid.org/0000-0001-9649-5906">orcid.org/0000-0001-9649-5906</a></p>
                 </div>
@@ -284,10 +286,7 @@
                 <div class="p_bio">
                     <h4>Susanna Sansone</h4>
                     <p class="p_position">Oxford eResearch</p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and
-                    scrambled it to make a type specimen book.
+                    CONTENT REQUIRED
                 </div>
             </div>
             <div class="col-md-3 col-md-3 col-sm-3 person">
@@ -308,9 +307,7 @@
                 <div class="p_bio">
                     <h4>Alejandra Gonzalez Beltran</h4>
                     <p class="p_position">Oxford eResearch</p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book.
+                    CONTENT REQUIRED
                 </div>
             </div>
             <div class="col-md-3 col-md-3 col-sm-3 person">
@@ -318,9 +315,7 @@
                 <div class="p_bio">
                     <h4>Philippe Rocca-Serra</h4>
                     <p class="p_position">Oxford eResearch</p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book.
+                    CONTENT REQUIRED
                 </div>
             </div>
         </div>
@@ -330,9 +325,7 @@
                 <div class="p_bio">
                     <h4>Katherine Denby</h4>
                     <p class="p_position">University of York</p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book.
+                    CONTENT REQUIRED
                 </div>
             </div>
             <div class="col-md-3 col-md-3 col-sm-3 person">
@@ -354,9 +347,7 @@
                 <div class="p_bio">
                     <h4>Ruth Bastow</h4>
                     <p class="p_position">Global Plant Council</p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book.
+                    CONTENT REQUIRED
                 </div>
             </div>
         </div>
