--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             <li><a href="#about">Project</a>
             </li>
-            <li><a href="#agenda-sec">Agenda</a>
+            <li><a href="#news-sec">News</a>
             </li>
             <li><a href="#work-sec">People</a>
             </li>
@@ -72,19 +72,14 @@
 
 <!--End Navigation -->
 
-
 <div id="myCarousel" class="carousel container slide">
     <div class="carousel-inner">
         <div class="active item one"></div>
-
-
         <div class="item four"></div>
         <div class="item five"></div>
-
         <div class="item seven"></div>
     </div>
 </div>
-
 
 <!--Header section  -->
 <div class="container" id="home">
@@ -96,7 +91,6 @@
             <h2 class="sub-head" id="carousel_text">describe &nbsp deposit &nbsp discover</h2>
             <!--
             <div class="head-sub-main">
-
                 <p id="carousel_text" class="text-center">Publications, data, images, and other ‘research objects’ can
                     be submitted through COPO to remote long-term
                     storage repositories, with a helpful graphical user interface (GUI) relieving much of the
@@ -114,7 +108,6 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 col-md-12 col-sm-12">
-
                 <h3 class="project-para"><i class="fa fa-book" aria-hidden="true"></i>&nbsp Publication</h3>
                 COPO is a portal for plant scientists to describe, store and retrieve data more easily, using community
                 standards and public repositories making it east for scientists to share their results.
@@ -129,21 +122,13 @@
                 submissions and similar workflows from other scientists.
                 </h4>
             </div>
-
         </div>
-
-
     </div>
 </section>
-
-
 <!--End About Section-->
 
-
-<!-- WORK Flow Section -->
-<section class="color-green" id="agenda-sec">
+<section class="color-green" id="news-sec">
     <div class="container">
-
         <div class="row">
             <div class="col-md-12 col-md-12 col-sm-12">
                 <h2>2nd COPO Workshop Agenda - 12th/13th December 2016</h2>
@@ -177,24 +162,15 @@
                     </li>
                     <li>Use COPO to submit ENA data</li>
                 </ul>
-
                 <div class="lead">Summary and thanks</div>
                 <div class="lead">Developer meetup</div>
-                <div class="lead">SAB Conference Call</div>
-
-
             </div>
-
         </div>
-
-
     </div>
 </section>
 
 <section class="color-white" id="work-sec">
     <div class="container">
-
-
         <div class="row">
             <h2>Organisations</h2>
             <div class="col-md-3 col-md-3 col-sm-3 organisation">
@@ -230,6 +206,24 @@
                     <a href="https://github.com/ISA-tools/isa-api">https://github.com/ISA-tools/isa-api</a>.
                 </div>
             </div>
+            <div class="col-md-3 col-md-3 col-sm-3 organisation">
+                <div class="o_img">
+                    <img class="org_img" src="assets/img/york.png"/>
+                </div>
+                <div class="o_bio">
+                    <h4>University of York</h4>
+                    CONTENT NEEDED
+                </div>
+            </div>
+            <div class="col-md-3 col-md-3 col-sm-3 organisation">
+                <div class="o_img">
+                    <img class="org_img" src="assets/img/ebi.png"/>
+                </div>
+                <div class="o_bio">
+                    <h4>EMBL-EBI</h4>
+                    CONTENT NEEDED
+                </div>
+            </div>
         </div>
 
         <div class="row">
@@ -242,7 +236,7 @@
                     Rob leads the <a href="http://www.earlham.ac.uk/davey-group">Data Infrastructure and Algorithms
                     group</a> at the Earlham Institute and is the PI for the COPO project. He has a PhD in Computer
                     Science from the University of East Anglia, undertaken at the Roberts lab in the <a
-                        href="http://www.ncyc.ac.uk">National Collection of Yeast Cultures</a>. Rob leads a number of
+                        href="http://www.ncyc.co.uk">National Collection of Yeast Cultures</a>. Rob leads a number of
                     large computing infrastructure development and deployment projects, is a certified <a
                         href="http://software-carpentry.org">Software Carpentry</a> instructor, an editorial board
                     member for Nature Scientific Data, and a <a href="https://www.software.ac.uk">Software
@@ -354,8 +348,6 @@
     </div>
 </section>
 
-
-<!--End WORK Flow  Section -->
 <!-- Contact Section -->
 <section class="color-light " id="contact-sec">
     <div class="container">
@@ -364,8 +356,7 @@
                 <h2>Contact Us</h2>
                 <h4>
                     <strong>
-                        If you have queries, support issues or would like to contribute to COPO, we would love to hear
-                        from you.
+                        If you have queries, support issues or would like to contribute to COPO, we would love to hear from you.
                     </strong>
                 </h4>
             </div>
