--- a/index.html
+++ b/index.html
@@ -107,21 +107,24 @@
 <section class="color-white" id="about">
     <div class="container">
         <div class="row">
-            <div class="col-md-12 col-md-12 col-sm-12">
-                <h3 class="project-para"><i class="fa fa-book" aria-hidden="true"></i>&nbsp Publication</h3>
-                COPO is a portal for plant scientists to describe, store and retrieve data more easily, using community
+            <div class="info-panel">
+                <h2 class="project-para"><i class="fa fa-book" aria-hidden="true"></i>&nbsp Publication</h2>
+                COPO is a portal for plant scientists to describe, store and retrieve data more easily, using
+                community
                 standards and public repositories making it east for scientists to share their results.
-
-                <h3 class="project-para"><i class="fa fa-retweet" aria-hidden="true"></i>&nbsp Citation</h3>
+            </div>
+            <div class="info-panel">
+                <h2 class="project-para"><i class="fa fa-retweet" aria-hidden="true"></i>&nbsp Citation</h2>
                 It will provide a way to get credit for work, such as source code or research data, which still are
                 not cited in the majority of scientific papers
-
-                <h3 class="project-para"><i class="fa fa-magic" aria-hidden="true"></i>&nbsp Automation</h3>
-                COPO provides wizards for data description, adding metadata to research objects with guided help and
-                natural flow. COPO makes suggestions for what information you might want to submit based on past
-                submissions and similar workflows from other scientists.
-                </h4>
             </div>
+            <div class="info-panel">
+                <h2 class="project-para"><i class="fa fa-magic" aria-hidden="true"></i>&nbsp Automation</h2>
+                Wizards allow the adding metadata to research objects with guided help and
+                natural flow. COPO makes suggestions based on past
+                submissions and similar workflows from other scientists.
+            </div>
+
         </div>
     </div>
 </section>
@@ -265,7 +268,8 @@
                     <h4>Felix Shaw</h4>
                     <p class="p_position">Earlham Institute</p>
                     Felix is a Research Software Engineer working on the COPO platform; a tool for creating,
-                    depositing and searching for bundles of research objects. His PhD is in Computer Science studying facial
+                    depositing and searching for bundles of research objects. His PhD is in Computer Science studying
+                    facial
                     animation, computer graphics, signal processing and machine learning. His current interests are in
                     the fields of data science, open source and how to apply machine learning techniques in these areas
                     to improve the tools available to researchers.
@@ -356,7 +360,8 @@
                 <h2>Contact Us</h2>
                 <h4>
                     <strong>
-                        If you have queries, support issues or would like to contribute to COPO, we would love to hear from you.
+                        If you have queries, support issues or would like to contribute to COPO, we would love to hear
+                        from you.
                     </strong>
                 </h4>
             </div>
