make template, agenda page and display for news on main news section

--- a/index.html
+++ b/index.html
@@ -133,41 +133,27 @@
 <section class="color-green" id="news-sec">
     <div class="container">
         <div class="row">
-            <div class="col-md-12 col-md-12 col-sm-12">
-                <h2>2nd COPO Workshop Agenda - 12th/13th December 2016</h2>
-                <h4>
-                    Day 1
-                </h4>
+            <div class="col-lg-1 col-md-1 col-sm-1"></div>
+            <div class="col-lg-10 col-md-10 col-sm-10">
+                <div class="news-item">
+                    <!-- CONTENT HERE -->
+                    <h2 class="project-para">COPO 2nd Workshop <span
+                            class="small">12th-13th, 13th-14th, 14th-15th December</span></h2>
+                    <div class="news-item-text">We are pleased to announce the 2nd COPO Workshop / User group will be
+                        held
+                        on the dates above (to be further decided at this<a
+                                href="http://doodle.com/poll/khvybpiwk42de8m6">
+                            doodle poll </a>). The purpose of this workshop is to demonstrate progress so far, gauge
+                        user
+                        opinion as the usability of the current COPO implementation and to discuss features and
+                        functionality the community would like to see implemented in the near future.
+                        <br/>
+                        Please find the <a href="agenda_workshop2.html">agenda</a> for the meeting here.
+                    </div>
 
-
-                <span class="lead">Short project and group introduction</span>
-                <ul>
-
-                    <li>Set out what we want to achieve</li>
-                    <li>Experimental metadata collection (spreadsheets, ISA standard)</li>
-                    <li>Spreadsheet annotation technologies (hypothes.is, RightField, OntoMaton)</li>
-                    <li>Raw sequence data submissions (ENA)</li>
-                </ul>
-                <span class="lead">Group Breakout</span>
-                <ul>
-                    <li>Real world sequence datasets that the groups are able to/want to share</li>
-                    <li>Understand breadth of experimental data collection and opportunities to standardise</li>
-                </ul>
-
-                <h4>Day 2</h4>
-
-                <span class="lead">Continue group breakouts</span>
-                <ul>
-                    <li>Start working on annotating experimental metadata using hypothes.is/annotator.js</li>
-                    <li>Use Ontology Lookup Service (OLS) to search and use ontology terms for annotation</li>
-                    <li>Use Zooma (<a href="https://www.ebi.ac.uk/spot/zooma/">https://www.ebi.ac.uk/spot/zooma/</a>) to
-                        collate terms that don’t exist in ontologies
-                    </li>
-                    <li>Use COPO to submit ENA data</li>
-                </ul>
-                <div class="lead">Summary and thanks</div>
-                <div class="lead">Developer meetup</div>
+                </div>
             </div>
+            <div class="col-lg-1 col-md-1 col-sm-1"></div>
         </div>
     </div>
 </section>
