--- a/index.html
+++ b/index.html
@@ -210,7 +210,9 @@
                 </div>
                 <div class="o_bio">
                     <h4>EMBL-EBI</h4>
-                    CONTENT NEEDED
+                    The role of EMBL-EBI in COPO is to support data from COPO to the public archives, and to
+                    disseminate integrated data sets prepared through the COPO infrastructure through Ensembl Plants and
+                    other public resources.
                 </div>
             </div>
         </div>
