--- a/index.html
+++ b/index.html
@@ -141,9 +141,7 @@
                             class="small">12th-13th, 13th-14th, 14th-15th December</span></h2>
                     <div class="news-item-text">We are pleased to announce the 2nd COPO Workshop / User group will be
                         held
-                        on the dates above (to be further decided at this<a
-                                href="http://doodle.com/poll/khvybpiwk42de8m6">
-                            doodle poll </a>). The purpose of this workshop is to demonstrate progress so far, gauge
+                        on the dates above in mid December. The purpose of this workshop is to demonstrate progress so far, gauge
                         user
                         opinion as the usability of the current COPO implementation and to discuss features and
                         functionality the community would like to see implemented in the near future.
