remove doodle poll link

--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
                     <h2 class="project-para">COPO 2nd Workshop <span
                             class="small">12th-13th, 13th-14th, 14th-15th December</span></h2>
                     <div class="news-item-text">We are pleased to announce the 2nd COPO Workshop / User group will be
-                        held
-                        on the dates above in mid December. The purpose of this workshop is to demonstrate progress so far, gauge
+                        held in mid December. The purpose of this workshop is to demonstrate progress so far, gauge
                         user
                         opinion as the usability of the current COPO implementation and to discuss features and
                         functionality the community would like to see implemented in the near future.
