updated oxford bios

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 <div class="p_bio">
                     <h4>Toni Etuk</h4>
                     <p class="p_position">Earlham Institute</p>
-                    Toni works as a Research Software Engineer at the Earlham Institute. He has a PhD in
+                    Toni is a Research Software Engineer at the Earlham Institute. He has a PhD in
                     Computer Science from the University of Aberdeen. His area of interest was multi-agent systems, with
                     a focus on computational models of Trust and Reputation. He continues to explore these techniques,
                     and a number of techniques from Machine Learning and statistics, in contexts of Open Science and
@@ -268,8 +268,14 @@
                 <img src="assets/img/Susanna.jpg"/>
                 <div class="p_bio">
                     <h4>Susanna Sansone</h4>
-                    <p class="p_position">Oxford eResearch</p>
-                    CONTENT REQUIRED
+                    <p class="p_position">Oxford eResearch Centre</p>
+                    Susanna is Associate Director at the University of Oxford e-Research Centre. Her interests are in
+                    the areas of knowledge and information management, and interoperability of
+                    applications. Since 2000, her projects have focused on improving the collection, curation and
+                    representation of multi-dimensional life, environmental and biomedical sciences data, to support
+                    data reproducibility and the evolution of scholarly publishing.
+                    <p class="p_orcid"><img src="assets/img/orcid.png"><a
+                            href="http://orcid.org/0000-0001-5306-5690">orcid.org/0000-0001-5306-5690</a></p>
                 </div>
             </div>
             <div class="col-md-3 col-md-3 col-sm-3 person">
@@ -289,16 +295,28 @@
                 <img src="assets/img/Alejandra.jpg"/>
                 <div class="p_bio">
                     <h4>Alejandra Gonzalez Beltran</h4>
-                    <p class="p_position">Oxford eResearch</p>
-                    CONTENT REQUIRED
+                    <p class="p_position">Oxford eResearch Centre</p>
+                    Alejandra is a Research Lecturer at the University of Oxford e-Research Centre, where she focuses on
+                    developing methodologies and software tools for data science, including
+                    knowledge management and data analysis. She mainly deals with heterogeneous biological and
+                    biomedical data, within the context of the ISA infrastructure. She brings these skills along with a
+                    wealth of software engineering experience to the COPO project.
+                    <p class="p_orcid"><img src="assets/img/orcid.png"><a
+                            href="http://orcid.org/0000-0003-3499-8262">orcid.org/0000-0003-3499-8262</a></p>
                 </div>
             </div>
             <div class="col-md-3 col-md-3 col-sm-3 person">
                 <img src="assets/img/Philippe.jpg"/>
                 <div class="p_bio">
                     <h4>Philippe Rocca-Serra</h4>
-                    <p class="p_position">Oxford eResearch</p>
-                    CONTENT REQUIRED
+                    <p class="p_position">Oxford eResearch Centre</p>
+                    Phillipe has been an active member of several standardisation efforts aimed at promoting the vision
+                    for open data and open science. As part of several EU projects in toxicogenomics and nutrigenomics,
+                    he coordinated the development of the ISA project, which now continues at the University of Oxford
+                    e-Research Centre. As part of the COPO project he provides technical expertise with regards to
+                    metadata collection and experimental design.
+                    <p class="p_orcid"><img src="assets/img/orcid.png"><a
+                            href="http://orcid.org/0000-0001-9853-5668">orcid.org/0000-0001-9853-5668</a></p>
                 </div>
             </div>
         </div>
