updated oxford bios

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 <img src="assets/img/Susanna.jpg"/>
                 <div class="p_bio">
                     <h4>Susanna Sansone</h4>
-                    <p class="p_position">Oxford eResearch Centre</p>
+                    <p class="p_position">Oxford e-Research Centre</p>
                     Susanna is Associate Director at the University of Oxford e-Research Centre. Her interests are in
                     the areas of knowledge and information management, and interoperability of
                     applications. Since 2000, her projects have focused on improving the collection, curation and
@@ -282,7 +282,7 @@
                 <img src="assets/img/david.png"/>
                 <div class="p_bio">
                     <h4>David Johnson</h4>
-                    <p class="p_position">Oxford eResearch Centre</p>
+                    <p class="p_position">Oxford e-Research Centre</p>
                     David Johnson is a Senior Research Associate / Research Software Engineer in the Oxford e-Research
                     Centre. His work concerns the development of data infrastructure to support data-intensive research
                     in the life, natural, and biomedical sciences. In the COPO project, David is part of the ISA Team
@@ -295,7 +295,7 @@
                 <img src="assets/img/Alejandra.jpg"/>
                 <div class="p_bio">
                     <h4>Alejandra Gonzalez Beltran</h4>
-                    <p class="p_position">Oxford eResearch Centre</p>
+                    <p class="p_position">Oxford e-Research Centre</p>
                     Alejandra is a Research Lecturer at the University of Oxford e-Research Centre, where she focuses on
                     developing methodologies and software tools for data science, including
                     knowledge management and data analysis. She mainly deals with heterogeneous biological and
@@ -309,7 +309,7 @@
                 <img src="assets/img/Philippe.jpg"/>
                 <div class="p_bio">
                     <h4>Philippe Rocca-Serra</h4>
-                    <p class="p_position">Oxford eResearch Centre</p>
+                    <p class="p_position">Oxford e-Research Centre</p>
                     Phillipe has been an active member of several standardisation efforts aimed at promoting the vision
                     for open data and open science. As part of several EU projects in toxicogenomics and nutrigenomics,
                     he coordinated the development of the ISA project, which now continues at the University of Oxford
