Almost fix info-panel box spacing

--- a/index.html
+++ b/index.html
@@ -105,28 +105,49 @@
 
 <!--About Section-->
 <section class="color-white" id="about">
-    <div class="container">
-        <div class="row">
-            <div class="info-panel">
-                <h2 class="project-para"><i class="fa fa-book" aria-hidden="true"></i>&nbsp Publication</h2>
-                COPO is a portal for plant scientists to describe, store and retrieve data more easily, using
-                community
-                standards and public repositories making it east for scientists to share their results.
+<!--    <div class="container"> -->
+  <div class="row">
+    <div class="col-lg-2 col-md-2 col-sm-2"></div>
+    <div class="col-lg-8 col-md-8 col-sm-8">
+      <div class="row">
+        <div class="col-lg-4 col-md-4 col-sm-12">
+          <div class="info-panel">
+            <div class="info-panel-header">
+              <i class="fa fa-book fa-2x" aria-hidden="true"></i>
+              <span class="icon-text">Publication</span>
             </div>
-            <div class="info-panel">
-                <h2 class="project-para"><i class="fa fa-retweet" aria-hidden="true"></i>&nbsp Citation</h2>
-                It will provide a way to get credit for work, such as source code or research data, which still are
-                not cited in the majority of scientific papers
+            <div>
+            COPO is a portal for plant scientists to describe, store and retrieve data more easily, using community standards and public repositories making it east for scientists to share their results.
             </div>
-            <div class="info-panel">
-                <h2 class="project-para"><i class="fa fa-magic" aria-hidden="true"></i>&nbsp Automation</h2>
-                Wizards allow the adding metadata to research objects with guided help and
-                natural flow. COPO makes suggestions based on past
-                submissions and similar workflows from other scientists.
-            </div>
-
+          </div> 
         </div>
+        <div class="col-lg-4 col-md-4 col-sm-12">
+          <div class="info-panel">
+            <div class="info-panel-header">
+              <i class="fa fa-retweet fa-2x" aria-hidden="true"></i>
+              <span class="icon-text">Citation</span>
+            </div>
+            <div>
+            It will provide a way to get credit for work, such as source code or research data, which still are not cited in the majority of scientific papers
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12">
+          <div class="info-panel">
+            <div class="info-panel-header">
+              <i class="fa fa-magic fa-2x" aria-hidden="true"></i>
+              <span class="icon-text">Automation</span>
+            </div>
+            <div>
+            Wizards allow the adding metadata to research objects with guided help and natural flow. COPO makes suggestions based on past submissions and similar workflows from other scientists.
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+    <div class="col-lg-2 col-md-2 col-sm-2"></div>
+  </div>
+<!--    </div> -->
 </section>
 <!--End About Section-->
 
