Fix header info panel box spacing and text

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               <span class="icon-text">Publication</span>
             </div>
             <div>
-            COPO is a portal for plant scientists to describe, store and retrieve data more easily, using community standards and public repositories making it east for scientists to share their results.
+            COPO is a portal for plant scientists to describe, store and retrieve data more easily, using community standards and public repositories that enable the open sharing of results. COPO can link your outputs to your ORCiD profile.
             </div>
           </div> 
         </div>
@@ -128,7 +128,7 @@
               <span class="icon-text">Citation</span>
             </div>
             <div>
-            It will provide a way to get credit for work, such as source code or research data, which still are not cited in the majority of scientific papers
+            By tracking unique identifiers and DOIs, COPO can provide a way to monitor usage and get credit for your work, such as source code or research data, which still are not typically cited in the majority of scientific papers.
             </div>
           </div>
         </div>
@@ -139,7 +139,7 @@
               <span class="icon-text">Automation</span>
             </div>
             <div>
-            Wizards allow the adding metadata to research objects with guided help and natural flow. COPO makes suggestions based on past submissions and similar workflows from other scientists.
+            COPO Wizards allow metadata to be added to your research objects with guided help and natural workflows. COPO can suggest metadata that might be appropriate for your data based on past submissions and similar workflows.
             </div>
           </div>
         </div>
