Fix media resizing for header COPO logo and carousel text

--- a/index.html
+++ b/index.html
@@ -441,11 +441,8 @@
                 </form>
                 <br/>
                 <div id="social-icon">
-                    <a href="#"><i class="fa fa-facebook fa-2x"></i></a>
-                    <a href="#"><i class="fa fa-twitter fa-2x"></i></a>
-                    <a href="#"><i class="fa fa-linkedin fa-2x"></i></a>
+                    <a href="https://www.twitter.com/copo_project"><i class="fa fa-twitter fa-2x"></i></a>
                     <a href="#"><i class="fa fa-google-plus fa-2x"></i></a>
-                    <a href="#"><i class="fa fa-pinterest fa-2x"></i></a>
                 </div>
             </div>
 
