Fix font and bio image sizing

--- a/index.html
+++ b/index.html
@@ -202,11 +202,9 @@
                 </div>
                 <div class="o_bio">
                     <h4>Oxford e-Research Centre</h4>
-                    The Oxford team mainly contributes elements of the open source ISA metadata tracking framework
-                    <a href="http://isa-tools.org">http://isa-tools.org</a>, which is supported by an international
-                    community
-                    (ISA commons, <a href="http://www.isacommons.org/">http://www.isacommons.org/</a>). The team
-                    develops
+                    The Oxford team mainly contributes elements of the open source metadata tracking framework
+                    <a href="http://isa-tools.org">ISA Tools</a>, which is supported by an international
+                    community (<a href="http://www.isacommons.org/">ISA Commons</a>). The team develops
                     the metadata representation, providing the model and configurations that enable standards-compliant
                     reporting, metadata deposition APIs and services, as well as conversion and validation services.
                     These functionalities are being developed within and incorporated into the wider ISA-API project
