Add York and GPC bios

--- a/index.html
+++ b/index.html
@@ -162,10 +162,9 @@
                             class="small">12th-13th, 13th-14th, 14th-15th December</span></h2>
                     <div class="news-item-text">We are pleased to announce the 2nd COPO Workshop / User group will be
                         held in mid December. The purpose of this workshop is to demonstrate progress so far, gauge
-                        user
-                        opinion as the usability of the current COPO implementation and to discuss features and
+                        user opinion as the usability of the current COPO implementation and to discuss features and
                         functionality the community would like to see implemented in the near future.
-                        <br/>
+                        <br/><br/>
                         Please find the <a href="agenda_workshop2.html">agenda</a> for the meeting here.
                     </div>
 
@@ -217,7 +216,7 @@
                 </div>
                 <div class="o_bio">
                     <h4>University of York</h4>
-                    CONTENT NEEDED
+                    The York team deals with community liaison and provides a connection to key user groups of the COPO platform, assists with user testing and usability via the <a href="http://www.garnetcommunity.org.uk/">GARNet Network</a> and the <a href="http://globalplantcouncil.org/">Global Plant Council</a>.
                 </div>
             </div>
             <div class="col-md-3 col-md-3 col-sm-3 organisation">
@@ -345,7 +344,8 @@
                 <div class="p_bio">
                     <h4>Katherine Denby</h4>
                     <p class="p_position">University of York</p>
-                    CONTENT REQUIRED
+                    Katherine is a Professor in the Department of Biology at the University of York. She uses experimental and computational/mathematical tools to elucidate gene regulatory networks underlying plant responses to the environment and re-engineer these networks to enhance stress tolerance, particularly disease resistance. She has expertise in large scale data analysis and integration, and interest in making such data easily discoverable and accessible for others.
+                    <p class="p_orcid"><img src="assets/img/orcid.png"><a href="http://orcid.org/0000-0002-7857-6814">orcid.org/0000-0002-7857-6814</a></p>
                 </div>
             </div>
             <div class="col-md-3 col-md-3 col-sm-3 person">
@@ -367,7 +367,7 @@
                 <div class="p_bio">
                     <h4>Ruth Bastow</h4>
                     <p class="p_position">Global Plant Council</p>
-                    CONTENT REQUIRED
+Ruth manages the day-to-day operations of the Global Plant Council which is a coalition of 28 learned plant, crop and agricultural science societies across the globe and represents ~55,000 researchers. Ruth has a proven track record in national and international project management for a number of different research projects and networks. In additional to her current administrative, policy, and advocacy work in the plant sciences she also has a background in plant science data standards, ontologies, and data sharing.
                 </div>
             </div>
         </div>
