--- a/index.html
+++ b/index.html
@@ -110,35 +110,35 @@
     <div class="col-lg-2 col-md-2 col-sm-2"></div>
     <div class="col-lg-8 col-md-8 col-sm-8">
       <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-12">
-          <div class="info-panel">
+        <div class="col-lg-4 col-md-4 col-sm-12 info-wrap">
+          <div id="pub-panel" class="info-panel">
             <div class="info-panel-header">
-              <i class="fa fa-book fa-2x" aria-hidden="true"></i>
+              <!-- <i class="fa fa-book fa-2x" aria-hidden="true"></i> -->
               <span class="icon-text">Publication</span>
             </div>
-            <div>
+            <div id="pub-panel-inner">
             COPO is a portal for plant scientists to describe, store and retrieve data more easily, using community standards and public repositories that enable the open sharing of results. COPO can link your outputs to your ORCiD profile.
             </div>
           </div> 
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12">
-          <div class="info-panel">
+        <div class="col-lg-4 col-md-4 col-sm-12 info-wrap">
+          <div id="cit-panel" class="info-panel">
             <div class="info-panel-header">
-              <i class="fa fa-retweet fa-2x" aria-hidden="true"></i>
+              <!-- <i class="fa fa-retweet fa-2x" aria-hidden="true"></i> -->
               <span class="icon-text">Citation</span>
             </div>
-            <div>
+            <div id="cit-panel-inner">
             By tracking unique identifiers and DOIs, COPO can provide a way to monitor usage and get credit for your work, such as source code or research data, which still are not typically cited in the majority of scientific papers.
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12">
-          <div class="info-panel">
+        <div class="col-lg-4 col-md-4 col-sm-12 info-wrap">
+          <div id="auto-panel" class="info-panel">
             <div class="info-panel-header">
-              <i class="fa fa-magic fa-2x" aria-hidden="true"></i>
+              <!--<i class="fa fa-magic fa-2x" aria-hidden="true"></i>-->
               <span class="icon-text">Automation</span>
             </div>
-            <div>
+            <div id="auto-panel-inner">
             COPO Wizards allow metadata to be added to your research objects with guided help and natural workflows. COPO can suggest metadata that might be appropriate for your data based on past submissions and similar workflows.
             </div>
           </div>
