update dates for workshop

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <div class="news-item">
                     <!-- CONTENT HERE -->
                     <h2 class="project-para">COPO 2nd Workshop <span
-                            class="small">12th-13th, 13th-14th, 14th-15th December</span></h2>
+                            class="small">13th-14th December</span></h2>
                     <div class="news-item-text">We are pleased to announce the 2nd COPO Workshop / User group will be
                         held in mid December. The purpose of this workshop is to demonstrate progress so far, gauge
                         user opinion as the usability of the current COPO implementation and to discuss features and
