--- a/agenda_workshop2.html
+++ b/agenda_workshop2.html
@@ -239,9 +239,9 @@
                 </dl>
             </ul>
             <h4 class="h4">11:40 AM - GarNET / DivSeek update <span class="small">Ruth Bastow</span></h4>
-            <h4 class="h4">12:00 PM - ISA framework updates <span class="small">Oxford Group</span></h4>
+            <h4 class="h4">12:30 PM - Feedback and Wrap up <span class="small">Group</span></h4>
             <h4 class="h4">13:00 PM - Lunch</h4>
-            <h4 class="h4">13:30 PM - Feedback and Wrap up <span class="small">Group</span></h4>
+            <h4 class="h4">14:00 PM - Developer's Meeting <span class="small">COPO Developers</span></h4>
             <h4 class="h4">15:00 PM - Depart</h4>
         </div>
     </section>
